--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
 					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
 				</ul>
 			</div>
-
 		</aside>
 
 		<div id="colorlib-main">
@@ -132,13 +131,12 @@
 									<div class="about-desc">
 										<span class="heading-meta">Diggin Deep About Me</span>
 										<h2 class="colorlib-heading" style="font-family: 'Titillium Web', sans-serif;">Who Am I?</h2>
-										<p><strong>Hi I'm Jackson Ford</strong> On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
-										<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+										<p><strong>I'm Rifat Bin Masud!</strong> A student currently studying Computer Science and Engineering at North South University at Dhaka, Bangladesh.</p>
+										<p>An<strong> Internet resource nerd</strong>, I love learning new things aside from my boring university stuffs. I'm actively learning all things Artifical Intelligence and Web Development currently and hoping to slip into the world of IoT in near future.</p>
+										<p>In free time its all music to me (rarely find free time these days). My favorite bands are(alphabetically):<br>Amit Trivedi, AR Rahman, Artcell, The Beatles, The Beach Boys, Bruno Mars, Cage The Elephant, Coldplay, Daft Punk, The Doors, Drake, Eric Clapton, The Format, FUN, Gorillaz, Jack White, John Lennon, Kanye West, Kendrick Lamar, Led Zeppelin, Michael Jackson, Neil Young, Outkast, Paul Simon, Pink, Prince, Queen, Radiohead, Simon and Garfunkel, Shankar-Ehsaan-Loy, Shironamhin, Sting, Warfaze.. just to name a few. <br><strong>I just Like good music.</strong></p>
 									</div>
 								</div>
 							</div>
-							
-							
 						</div>
 					</div>
 				</div>
@@ -162,7 +160,7 @@
 								</span>
 								<div class="desc">
 									<h3>Machine Learning</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>I know several algorithms and how to apply them at Scikit-Learn.</p>
 								</div>
 							</div>
 						</div>
@@ -173,7 +171,7 @@
 								</span>
 								<div class="desc">
 									<h3>Web Development</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>I know the fundamentals alright and helped building <a href="http://www.mars-ex.com/">Our university mars rover</a></p>
 								</div>
 							</div>
 						</div>
@@ -184,7 +182,7 @@
 								</span>
 								<div class="desc">
 									<h3>Computer Vision</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>I know OpenCV very well and can build detection softwares based on it.</p>
 								</div>
 							</div>
 						</div>
@@ -194,8 +192,8 @@
 									<i class="icon-layers2"></i>
 								</span>
 								<div class="desc">
-									<h3>Data Science</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<h3>Data Visualization</h3>
+									<p>I've used popular libraries such as pandas, matplotlib to visualize fairly large datasets</p>
 								</div>
 							</div>
 						</div>
@@ -206,7 +204,7 @@
 								</span>
 								<div class="desc">
 									<h3>Python Software</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>I've made several simple python based software and I know the basic pipeline of making one.</p>
 								</div>
 							</div>
 						</div>
@@ -217,7 +215,7 @@
 								</span>
 								<div class="desc">
 									<h3>Deep Learning</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>Pretty focused on it :P. Check out <a href="https://github.com/riffAt2013/Grokking-Deep-Learning-practices">the repo </a>based on Jupyter Notebook to see my progress.</p>
 								</div>
 							</div>
 						</div>
@@ -451,7 +449,7 @@
 									<i class="icon-map"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>327 Shenpara Parbota, Mirpur, Dhaka</p>
+									<p><a href="https://www.google.com/maps/place/23%C2%B048'12.2%22N+90%C2%B022'23.3%22E/@23.8033798,90.372713,20.33z/data=!4m14!1m7!3m6!1s0x3755c0d6f6b8c2ff:0x3b138861ee9c8c30!2sMirpur+10+Roundabout,+Dhaka+1216!3b1!8m2!3d23.8069245!4d90.3686978!3m5!1s0x3755c0d36e74edcf:0x8c12b84074f98a21!7e2!8m2!3d23.803383!4d90.3731499">327 Shenpara Parbota, Mirpur, Dhaka</a></p>
 								</div>
 							</div>
 
