--- a/index.html
+++ b/index.html
@@ -87,40 +87,7 @@
 		</aside>
 
 		<div id="colorlib-main">
-			<section id="colorlib-hero" class="js-fullheight" data-section="home">
-				<div class="flexslider js-fullheight">
-					<ul class="slides">
-				   	<li style="background-color: rgba(126, 140, 140, 0.5);">
-				   		<div class="overlay"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
-					   				<div class="slider-text-inner js-fullheight">
-					   					<div class="desc">
-						   					<h1 style="font-family: 'Titillium Web', sans-serif;">Hi! <br>Rifat Again</h1>						   						
-										</div>
-					   				</div>
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
-				   	<li>
-				   		<div class="overlay"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
-					   				<div class="slider-text-inner">
-					   					<div class="desc">
-						   					<h1 style="font-family: 'Titillium Web', sans-serif;">Follow along to see the site!</h1>										
-										</div>
-					   				</div>
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
-				  	</ul>
-			  	</div>
-			</section>
+			
 
 			<section class="colorlib-about" data-section="about">
 				<div class="colorlib-narrow-content">
@@ -235,7 +202,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+							<p>Learning AI and web-development, I acquired a few language and frameworks pretty well.The progress is definitely an ongoing thing.</p>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
@@ -252,9 +219,9 @@
 							<div class="progress-wrap">
 								<h3>OpenCV</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="90"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-								    <span>90%</span>
+								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="70"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
+								    <span>70%</span>
 								  	</div>
 								</div>
 							</div>
@@ -274,9 +241,9 @@
 							<div class="progress-wrap">
 								<h3>CSS3</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="60"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
-								    <span>60%</span>
+								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="50"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:50%">
+								    <span>50%</span>
 								  	</div>
 								</div>
 							</div>
@@ -285,9 +252,9 @@
 							<div class="progress-wrap">
 								<h3>JavaScript</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-								    <span>70%</span>
+								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="30"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:30%">
+								    <span>30%</span>
 								  	</div>
 								</div>
 							</div>
@@ -296,9 +263,9 @@
 							<div class="progress-wrap">
 								<h3>Tensorflow</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-								    <span>80%</span>
+								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="30"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:30%">
+								    <span>30%</span>
 								  	</div>
 								</div>
 							</div>
@@ -331,10 +298,7 @@
 									         <div class="panel-body">
 									            <div class="row">
 										      		<div class="col-md-6">
-										      			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-										      		</div>
-										      		<div class="col-md-6">
-										      			<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+										      			<p>Currently doing this.</p>
 										      		</div>
 										      	</div>
 									         </div>
@@ -349,7 +313,7 @@
 									    </div>
 									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>	
+									            <p>I passed it in 2016 from Notre Dame College. Got a GPA-5</p>
 									        </div>
 									    </div>
 									</div>
@@ -363,7 +327,7 @@
 									    </div>
 									    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
 									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>	
+									        	<p>Passed my SSC from Monipur High School and College at 2014 with grade: GPA-5</p>
 									        </div>
 									    </div>
 									</div>
@@ -393,8 +357,8 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">NSU Mars-Ex Software Developer</a> <span>2019-Present</span></h2>
-					                  <p>Tolerably earnestly middleton extremely distrusts she boy now not. Add and offered prepare how cordial two promise. Greatly who affixed suppose but enquire compact prepare all put. Added forth chief trees but rooms think may.</p>
+					                  <h2><a href="http://www.mars-ex.com">NSU Mars-Ex Software Developer</a> <span>2019-Present</span></h2>
+					                  <p>This is our university mars rover project founded at 2018 from the members of the famous <strong>R&D</strong> group who pioneered robotics here at North South. <br>I helped this project by doing object detection work for the rover.</p>
 					               </div>
 					            </div>
 					         </article>
@@ -407,7 +371,7 @@
 					               </div>
 					               <div class="timeline-label">
 					               	<h2><a href="#">NSU Computer Engineering Club R&D Member</a> <span>2019-Present</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+					                  <p>I parallelly joined Mars-Ex and R&D (Research and Development), to get inspired to become a better software engineer. I volunteered at some events covered by them and currently planning to build a Chatbot with the software team.</p>
 					               </div>
 					            </div>
 					         </article>
