--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
-						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
 						<li><a href="#" data-nav-section="services">Services</a></li>
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
@@ -116,7 +115,8 @@
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta" >What I do?</span>
-							<h2 class="colorlib-heading" style="font-family: 'Titillium Web', sans-serif;">Here are some of my expertise</h2>
+							<h2 class="colorlib-heading" style="font-family: 'Titillium Web', sans-serif;">Here are some of my 
+current learning areas and progress</h2>
 						</div>
 					</div>
 					<div class="row row-pt-md">
@@ -202,7 +202,8 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<p>Learning AI and web-development, I acquired a few language and frameworks pretty well.The progress is definitely an ongoing thing.</p>
+							<p>Learning AI and web-development, I acquired a few language and frameworks pretty well. The progress 
+is definitely an ongoing thing.</p>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
